<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>eu.ralph-schuster</groupId>
		<artifactId>pom-oss</artifactId>
		<version>1.5.0</version>
	</parent>

	<properties>
		<project.home>http://techblog.ralph-schuster.eu/rs-library/</project.home>
	</properties>

	<artifactId>libs</artifactId>
	<version>1.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<url>http://download.ralph-schuster.eu/eu.ralph-schuster.libs/${project.version}</url>
	<name>eu.ralph-schuster.libs</name>
	<description>A collection of utilities</description>

	<scm>
		<connection>scm:git:https://github.com/technicalguru/rslibs.git</connection>
		<developerConnection>scm:git:https://github.com/technicalguru/rslibs.git</developerConnection>
		<url>https://github.com/technicalguru/rslibs</url>
	</scm>

	<distributionManagement>
		<site>
			<id>strato-server</id>
			<url>scp://download.ralph-schuster.eu/var/www/ralph-schuster.eu/download/eu.ralph-schuster.libs/${project.version}</url>
		</site>
	</distributionManagement>

	<issueManagement>
		<system>Jira</system>
		<url>http://jira.ralph-schuster.eu/browse/RSLIBS</url>
	</issueManagement>

	<ciManagement>
		<system>bamboo</system>
		<url>http://bamboo.ralph-schuster.eu/browse/RSLIB</url>
	</ciManagement>

	<developers>
		<developer>
			<id>ralph</id>
			<name>Ralph Schuster</name>
		</developer>
	</developers>

	<modules>
		<module>baselib</module>
		<module>data</module>
		<module>data-file</module>
		<module>data-hibernate</module>
		<module>templating</module>
	</modules>

	<repositories>
		<repository>
			<id>ow2-releases</id>
			<name>ObjectWeb Repository</name>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>fail</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</snapshots>
			<url>http://repository.ow2.org/nexus/content/repositories/ow2-legacy/</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<build>
		<plugins>
			<!-- Compile for Java 1.8 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
